add a make target to output the deployment manifest

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,2 +1,8 @@
 resources:
 - manager.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: controller
+  newName: 742073802618.dkr.ecr.us-west-2.amazonaws.com/strateos/pagerduty-operator
+  newTag: latest
