--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -5,10 +5,11 @@ ADD https://github.com/kubernetes-sigs/kubebuilder/releases/download/v2.3.1/kube
 WORKDIR /tmp
 RUN tar -xvf kubebuilder_2.3.1_linux_amd64.tar.gz && mv kubebuilder_2.3.1_linux_amd64 /usr/local/kubebuilder
 
-WORKDIR /workspace
-
 # install kustomize
+WORKDIR /usr/local/bin
 RUN curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
+
+WORKDIR /workspace
 
 # Copy the Go Modules manifests
 COPY go.mod go.mod
