--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: 742073802618.dkr.ecr.us-west-2.amazonaws.com/strateos/pagerduty-operator
+  newName: controller
   newTag: latest
